[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="more.jwtauth"
version="0.15.dev0"
description="JWT Access Auth Identity Policy for Morepath"
dynamic = ["readme"]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
authors = [{name = "Morepath developers", email = "henri@sancode.it"}]
maintainers = [{name = "Henri Hulski", email = "henri@sancode.it"}]
keywords=["morepath", "JWT", "identity", "authentication"]
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">= 3.10"
dependencies = [
    "morepath",
    "PyJWT == 2.8.0",
]

[project.urls]
Documentation = "https://github.com/morepath/more.jwtauth/blob/master/README.rst"
Repository = "https://github.com/morepath/more.jwtauth"
Issues = "https://github.com/morepath/more.jwtauth/issues"
Changelog = "https://github.com/morepath/more.jwtauth/blob/master/CHANGES.rst"

[project.optional-dependencies]
crypto=["cryptography >= 3.4.8"]
test = ["pytest >= 8", "WebTest >= 2.0.14", "pytest-env"]
coverage = ["pytest-cov"]
lint = ["black", "flake8", "isort", "pyupgrade"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

[tool.pytest]
testpaths = ["more"]
addopts = ["-vv"]
pythonpath = ["."]
env = ["RUN_ENV=test"]

[tool.coverage.run]
source = ["more.jwtauth"]

[tool.coverage.report]
show_missing = true

[tool.tox]
requires = ["tox>=4.21.1"]
env_list = [
  { product = [
    ["py310", "py311", "py312", "py313", "py314", "pypy3"],
    ["crypto", "nocrypto"],
  ] },
  "coverage",
  "lint",
  "pre-commit",
]
skip_missing_interpreters = true

[tool.tox.env_run_base]
package = "editable"
extras = ["test"]
deps = [
    { replace = "if", condition = "factor.crypto", then = ["cryptography"], extend = true },
]
commands = [["pytest", "{posargs:more/jwtauth}"]]

[tool.tox.env.coverage]
base_python = ["python3.11"]
extras = ["test", "coverage"]
deps = ["cryptography"]
commands = [
    ["pytest", "--cov", "--cov-fail-under=100", "{posargs:more/jwtauth}"],
]

[tool.tox.env.lint]
base_python = ["python3.11"]
extras = ["lint"]
commands = [
    ["flake8", "more/jwtauth"],
    ["black", "--check", "--diff", "--color", "."],
    ["isort", "--diff", "."],
]

[tool.tox.env.pre-commit]
base_python = ["python3.11"]
package = "skip"
deps = ["pre-commit"]
commands = [
    ["pre-commit", "run", "--all-files"],
]

[tool.black]
line-length = 80
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
      \.git
    | \.tox
    | env
    | venv
    | .venv
    | __pypackages__
    | __pycache__
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = 'black'
py_version = 311
skip_gitignore = true
